# libcafekbd

./: .build.yml  .travis.yml  AUTHORS  Makefile.am  NEWS  README  autogen.sh  configure.ac  index.html  libcafekbd.pc.in  libcafekbd.pot  libcafekbdui.pc.in  makepot  output_11e3bcc74d5de130f641607f1f6e852f1a0605b9
.tx/: config
2022-04-14-180025-13266-1@f6dbf4cefe84_master/: index.html  report-0e9930.html  report-11f9df.html  report-4fbcd2.html  report-672ed1.html  report-838e70.html  report-ce3b71.html  report-de4778.html
2022-04-14-180139-8020-cppcheck@f6dbf4cefe84_master/: 0.html  output_f6dbf4cefe842e3996eefe69509c6a9e90c178cc  stats.html
2022-04-14-191325-13266-1@8bf2f8ec9738_master/: index.html  report-0d2887.html  report-15dd9a.html  report-4e3101.html  report-5380b8.html  report-7c701d.html  report-ae5c6e.html  report-aed2e8.html
2022-04-14-191442-7006-cppcheck@8bf2f8ec9738_master/: index.html  output_8bf2f8ec973849e67cdc45daaf25df28d95abc7b
2022-04-28-071615-13312-1@49ceb7a78b91_master/: index.html  report-120eee.html  report-20c6f1.html  report-29840e.html  report-6823f1.html  report-6ff2da.html  report-884862.html  report-e44f71.html
2022-04-28-071727-8110-cppcheck@49ceb7a78b91_master/: output_49ceb7a78b91869ec2894a190e61b07465938335
2022-08-13-112931-13850-1@f3df950277d9_debrepo/: index.html  output_f3df950277d9baeb72acffd5b0712538d709a75d  report-37cb39.html  report-523ef4.html  report-5ce420.html  report-b4532a.html  report-c098bd.html  report-e0f2de.html  report-ff92e7.html
2022-08-13-113046-4926-cppcheck@f3df950277d9_debrepo/: 0.html  commitmsg  index.html  stats.html
2022-08-13-115524-13840-1@08156bcb1421_master/: index.html  output_08156bcb1421f3b95d10c81f2d5ea16956b9cdb7  report-37cb39.html  report-523ef4.html  report-5ce420.html  report-b4532a.html  report-c098bd.html  report-e0f2de.html  report-ff92e7.html
2022-08-28-172747-13840-1@3e05d62bbb5a_master/: index.html  report-37cb39.html  report-523ef4.html  report-5ce420.html  report-b4532a.html  report-c098bd.html  report-e0f2de.html  report-ff92e7.html
2022-08-28-172928-0851-cppcheck@3e05d62bbb5a_master/: 0.html  index.html  output_3e05d62bbb5aff944fc20eabc6050c20473dd240  stats.html
2022-12-29-234645-14699-1@76ac306d35a5_updateci/: index.html  report-37cb39.html  report-523ef4.html  report-5ce420.html  report-b4532a.html  report-c098bd.html  report-e0f2de.html  report-ff92e7.html
2022-12-29-234649-14698-1@84055fb2bf7a_updateci/: index.html  output_84055fb2bf7ab2bc7d72fc0a5c62d6b9f1d6d9bd  report-37cb39.html  report-523ef4.html  report-5ce420.html  report-b4532a.html  report-c098bd.html  report-e0f2de.html  report-ff92e7.html
2022-12-29-234814-5081-cppcheck@76ac306d35a5_updateci/: 0.html  2.html  commitmsg  index.html  output_76ac306d35a5d1abc0c6c98e4dd3d4a76ada1949
2022-12-29-235241-14701-1@84055fb2bf7a_master/: index.html  report-37cb39.html  report-523ef4.html  report-5ce420.html  report-b4532a.html  report-c098bd.html  report-e0f2de.html  report-ff92e7.html
2022-12-29-235357-1519-cppcheck@84055fb2bf7a_master/: 1.html  output_84055fb2bf7ab2bc7d72fc0a5c62d6b9f1d6d9bd  stats.html
2022-12-31-023207-14815-1@25e4fcd19dac_master/: index.html  output_25e4fcd19dacbca02615fcc42e7deab5ba1be80c  report-37cb39.html  report-523ef4.html  report-5ce420.html  report-b4532a.html  report-c098bd.html  report-e0f2de.html  report-ff92e7.html
2024-08-05-135752-14659-1@7c8338f2612a_master/: index.html  output_7c8338f2612aa4be6b65d16a44dffe39f3823939  report-37cb39.html  report-523ef4.html  report-5ce420.html  report-891289.html  report-b4532a.html  report-c098bd.html  report-e0f2de.html  report-fb6164.html  report-ff92e7.html
2024-08-05-135857-9527-cppcheck@7c8338f2612a_master/: 0.html  1.html  2.html  3.html  4.html  5.html  6.html  7.html  index.html  stats.html
2025-01-26-005711-14534-1@7c8338f2612a_cimaster/: index.html  report-37cb39.html  report-523ef4.html  report-5ce420.html  report-5d4bc8.html  report-891289.html  report-9361af.html  report-b4532a.html  report-c098bd.html  report-e0f2de.html  report-fb6164.html  report-ff92e7.html
2025-01-26-005815-0494-cppcheck@7c8338f2612a_cimaster/: 1.html  5.html  output_7c8338f2612aa4be6b65d16a44dffe39f3823939
2025-01-26-010022-14534-1@26cfef1adbef_devel/: commitmsg  index.html  report-37cb39.html  report-523ef4.html  report-5ce420.html  report-5d4bc8.html  report-891289.html  report-9361af.html  report-b4532a.html  report-c098bd.html  report-e0f2de.html  report-fb6164.html  report-ff92e7.html
2025-01-26-010152-3454-cppcheck@26cfef1adbef_devel/: 2.html  4.html  output_26cfef1adbefa7430fa6ca3d24ccdb83d3159f19
2025-01-26-011327-14534-1@26cfef1adbef_master/: index.html  report-37cb39.html  report-523ef4.html  report-5ce420.html  report-5d4bc8.html  report-891289.html  report-9361af.html  report-b4532a.html  report-c098bd.html  report-e0f2de.html  report-fb6164.html  report-ff92e7.html
2025-01-26-011457-8669-cppcheck@26cfef1adbef_master/: output_26cfef1adbefa7430fa6ca3d24ccdb83d3159f19
2025-02-05-151446-14375-1@a71c202df832_devel/: index.html  report-37cb39.html  report-523ef4.html  report-5ce420.html  report-5d4bc8.html  report-891289.html  report-9361af.html  report-b4532a.html  report-c098bd.html  report-e0f2de.html  report-fb6164.html  report-ff92e7.html
2025-02-05-151615-8124-cppcheck@a71c202df832_devel/: 2.html  6.html  commitmsg  output_a71c202df832f6430c641d1195ad0075dd21d335
2025-02-05-151820-14375-1@e57b15590cc2_devel/: commitmsg  index.html  (+12 more)
libcafekbd/: Makefile.am  cafekbd-config-private.h  cafekbd-desktop-config.c  cafekbd-desktop-config.h  cafekbd-indicator-config.c  cafekbd-indicator-config.h  cafekbd-indicator.c  cafekbd-indicator.h  cafekbd-keyboard-config.c  cafekbd-keyboard-config.h  cafekbd-keyboard-drawing.c  cafekbd-keyboard-drawing.h  cafekbd-status.c  cafekbd-status.h  cafekbd-util.c  cafekbd-util.h  org.cafe.peripherals-keyboard-xkb.gschema.xml.in  org.cafe.peripherals.keyboard.gresource.xml  show-layout.ui
test/: Makefile.am  cafekbd-indicator-test.c  cafekbd-keyboard-drawing-test.c  cafekbd-status-test.c
(+403 files in other folders)
